add Payment Non Cash ke Report Cash Pull, add method get Pdf File